--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,8 @@ li a:hover {
     margin-top: 15%;
     margin-left: auto;
     margin-right: auto;
+    min-height: 320px;
+    min-width: 240px;
 }
 
 .apps {
