--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
     left: 0;
     bottom: 0px;
     opacity: 0.9;
-    background-color: #569;
+    background-color: rgb(46, 247, 123);
     border-top: 10px;
     padding: 15px;
 
